# yahoo-symbols-archive

./: .gitignore  .gitignore.bak  README.md  download.py  pyproject.toml  requirements.txt
async_requests/: __init__.py  async_requests.py  config.py  utils.py
db/etf/: data_2023-03-12_part-0.csv
db/future/: data_2023-03-12_part-0.csv
yahoo_symbols/: download.py  yahoo_symbols.py
