[tool.poetry]
name = "yahoo-symbols"
version = "0.1.1"
description = "Downloads (nearly) every symbol available on finance.yahoo"
authors = ["legout <ligno.blades@gmail.com>"]
readme = "README.md"
packages = [{ include = "yahoo_symbols" }]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^1.5.3"
typer = "^0.7.0"
yfin = { git = "https://github.com/legout/yfin.git" }
rich = "^13.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
